--- a/app/src/main/res/drawable/top_background_profile.xml
+++ b/app/src/main/res/drawable/top_background_profile.xml
@@ -2,7 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:layout_height="match_parent" android:shape="rectangle">
-            <gradient android:angle="270" android:endColor="#ff8000" android:startColor="#ffb300" />
+            <gradient
+                android:angle="270"
+                android:endColor="#40807D"
+                android:startColor="#8BBFBD" />
             <corners
                 android:bottomLeftRadius="30dp"
                 android:bottomRightRadius="30dp" />
