--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/background_page_ii"
-    tools:context=".view.disease.DetailFragment"
+    tools:context="view.disease.DetailFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,8 +13,10 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/toolBar"
@@ -31,7 +33,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nama Penyakit"
-                    android:textColor="@color/White"
+                    android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -40,24 +42,14 @@
         </com.google.android.material.appbar.AppBarLayout>
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_below="@+id/toolBar"
-            android:id="@+id/image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/ic_launcher_background"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            />
-
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_below="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="25dp"
+            android:layout_below="@+id/toolBar"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginTop="40dp"
             android:orientation="vertical">
 
             <TextView
@@ -65,11 +57,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@id/image"
-                android:text="Penjelasasan Penyakit"
                 android:justificationMode="inter_word"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
+                android:text="Penjelasasan Penyakit"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="normal" />
@@ -78,9 +67,7 @@
                 android:id="@+id/Pencegahan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginEnd="30dp"
                 android:justificationMode="inter_word"
                 android:text="Pencegahan:"
                 android:textColor="@color/black"
@@ -91,10 +78,8 @@
                 android:id="@+id/txtPenjelasanPencegahan"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Penjelasasan Pencegahan"
                 android:justificationMode="inter_word"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
+                android:text="Penjelasasan Pencegahan"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="normal" />
@@ -103,9 +88,7 @@
                 android:id="@+id/Diagnosis"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginEnd="30dp"
                 android:justificationMode="inter_word"
                 android:text="Diagnosis:"
                 android:textColor="@color/black"
@@ -116,10 +99,8 @@
                 android:id="@+id/txtPenjelasanDiagnosis"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Penjelasasan Diagnosis"
                 android:justificationMode="inter_word"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
+                android:text="Penjelasasan Diagnosis"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="normal" />
@@ -128,9 +109,7 @@
                 android:id="@+id/Perawatan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginEnd="30dp"
                 android:justificationMode="inter_word"
                 android:text="Perawatan:"
                 android:textColor="@color/black"
@@ -142,19 +121,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@id/image"
-                android:text="Penjelasasan Perawatan"
                 android:justificationMode="inter_word"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
+                android:text="Penjelasasan Perawatan"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="normal" />
 
 
         </LinearLayout>
-
-
-
 
 
     </RelativeLayout>
