--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -87,6 +87,15 @@
             android:layout_marginEnd="10dp"
             android:textStyle="bold" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="dont heve account?"
+            android:layout_below="@id/btnLogin"
+            android:layout_marginTop="30dp"
+            android:gravity="center_horizontal"
+            />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnRegister"
             android:layout_below="@id/btnLogin"
@@ -96,6 +105,7 @@
             android:textColor="@color/black"
             android:layout_centerHorizontal="true"
             android:text="@string/sign_up"
+            android:layout_marginTop="40dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:textStyle="normal" />
@@ -104,7 +114,7 @@
             android:id="@+id/btnEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="180dp"
+            android:layout_marginTop="140dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/btnRegister"
             app:srcCompat="@drawable/google_login" />
