--- a/app/src/main/res/menu/nav_bar.xml
+++ b/app/src/main/res/menu/nav_bar.xml
@@ -3,22 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/nav_home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
-        android:title="Home" />
+        android:title="home" />
 
     <item
-        android:id="@+id/nav_account"
+        android:id="@+id/profileFragment"
         android:icon="@drawable/ic_account"
-        android:title="Account"/>
+        android:title="account"/>
 
     <item
-        android:id="@+id/nav_about"
+        android:id="@+id/aboutFragment"
         android:icon="@drawable/baseline_info_24"
-        android:title="About Us" />
+        android:title="about" />
 
     <item
-        android:id="@+id/nav_logout"
+        android:id="@+id/logout"
         android:icon="@drawable/baseline_logout_24"
         android:title="Logout"/>
 </menu>
