--- a/app/src/main/res/layout/disease_list.xml
+++ b/app/src/main/res/layout/disease_list.xml
@@ -17,7 +17,7 @@
         android:layout_margin="15dp">
 
         <TextView
-            android:id="@+id/txtNama"
+            android:id="@+id/txtNamaPenyakit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
