--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,6 +16,17 @@
         android:padding="10dp"
         app:layout_constraintTop_toTopOf="parent">
 
+<!--        <ImageView-->
+<!--            android:id="@+id/btnLogout"-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:layout_marginEnd="15dp"-->
+<!--            android:contentDescription="@string/app_name"-->
+<!--            android:src="@drawable/baseline_logout_24"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/textAppName"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/textAppName" />-->
+
         <TextView
             android:id="@+id/textAppName"
             android:layout_width="wrap_content"
@@ -34,12 +45,12 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:overScrollMode="never"
         android:scrollbars="none"
-        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@id/layoutHeader">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -64,7 +75,7 @@
                     android:layout_height="125dp"
                     android:contentDescription="@string/app_name"
                     android:padding="8dp"
-                    android:src="@drawable/hamster_dua"/>
+                    android:src="@drawable/hamster_dua" />
                 <!-- android:src="@drawable/gambar_dua"-->
 
                 <TextView
@@ -96,7 +107,7 @@
                     android:layout_height="125dp"
                     android:contentDescription="@string/app_name"
                     android:padding="8dp"
-                    android:src="@drawable/hamster_satu"/>
+                    android:src="@drawable/hamster_satu" />
                 <!--android:src="@drawable/gambar_tiga"-->
 
 
@@ -114,11 +125,11 @@
                 android:id="@+id/LayoutInformasi"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/white_rectangle_background"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="15dp"
-                android:layout_marginTop="25dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintEnd_toStartOf="@+id/LayoutPetunjukPengguna"
                 app:layout_constraintStart_toStartOf="parent"
@@ -151,11 +162,11 @@
                 android:id="@+id/LayoutPetunjukPengguna"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/white_rectangle_background"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="15dp"
-                android:layout_marginTop="25dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/LayoutDiagnosa"
@@ -187,13 +198,15 @@
                 android:padding="25dp"
                 app:layout_constraintEnd_toEndOf="@id/LayoutRiwayat"
                 app:layout_constraintStart_toStartOf="@id/LayoutDiagnosa"
-                app:layout_constraintTop_toBottomOf="@id/LayoutPetunjukPengguna" >
+                app:layout_constraintTop_toBottomOf="@id/LayoutPetunjukPengguna">
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+
+
 
 <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
 <!--        android:id="@+id/bottomNavigation"-->
