--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,5 +33,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/nav_bar" />
 
+    <View
+        android:id="@+id/ViewDivinder"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="@color/Divider"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
+        tools:ignore="MissingConstraints" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
