--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -84,7 +84,7 @@
         android:id="@+id/guideFragment"
         android:name="com.alifalpian.expertsystem.view.guide.GuideFragment"
         android:label="fragment_guide"
-        tools:layout="@layout/fragment_guide" />
+        tools:layout="@layout/fragment_guidee" />
     <fragment
         android:id="@+id/historyFragment"
         android:name="com.alifalpian.expertsystem.view.history.HistoryFragment"
