--- a/app/src/main/res/layout/disease_list.xml
+++ b/app/src/main/res/layout/disease_list.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/CardView"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="6dp"
@@ -12,7 +12,7 @@
     android:layout_marginBottom="10dp">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_margin="15dp">
 
@@ -21,19 +21,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginStart="15dp"
-            android:layout_toRightOf="@id/images"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:text="Nama Penyakit"
             android:textColor="@color/black"
             android:textSize="25sp"
             android:textStyle="bold" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/images"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:src="@drawable/ic_launcher_background"
-            />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
