--- a/app/src/main/res/layout/fragment_guide.xml
+++ b/app/src/main/res/layout/fragment_guide.xml
@@ -27,7 +27,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Petunjuk Penggunaan"
+                    android:text="@string/petunjuk_penggunaan"
                     android:textColor="@color/White"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -47,7 +47,7 @@
                 android:id="@+id/Petunjuk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Langkah-langkah untuk menggunakan aplikasi ini:"
+                android:text="@string/langkah_langkah_untuk_menggunakan_aplikasi_ini"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
@@ -56,67 +56,43 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
-                android:text="1. Buka aplikasi Diagnosa Penyakit Haster" />
+                android:justificationMode="inter_word"
+                android:text="@string/point_petunjuk_1" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
-                android:text="2. Lihat daftar gejala yang mungkin dialami oleh hamster Anda" />
+                android:justificationMode="inter_word"
+                android:text="@string/point_petunjuk_2" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
-                android:text="3. Pilih gejala dengan mencentang kotak di sampingnya." />
+                android:text="@string/point_petunjuk_3"
+                android:justificationMode="inter_word" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:justificationMode="inter_word"
                 android:textSize="12sp"
-                android:text="4. Tekan tombol 'Cek Diagnosa' setelah memilih gejala." />
+                android:text="@string/point_petunjuk_4" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:justificationMode="inter_word"
                 android:textSize="12sp"
-                android:text="5. Lihat kemungkinan penyakit berdasarkan gejala yang dipilih." />
+                android:text="@string/point_petunjuk_5" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:justificationMode="inter_word"
                 android:textSize="12sp"
-                android:text="6. Baca deskripsi penyakit untuk pemahaman lebih lanjut." />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:text="7. Pilih penyakit yang cocok dengan gejala yang dialami." />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:text="8. Tekan tombol 'Diagnosis' untuk hasil diagnosa." />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:text="9. Lihat hasil diagnosa berdasarkan gejala yang dipilih." />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:text="10. Baca informasi lebih lanjut tentang penyakit yang terdiagnosis." />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:text="11. Gunakan tombol 'Kembali' untuk ke beranda atau 'Reset' untuk mulai ulang." />
+                android:text="@string/point_petunjuk_6" />
 
         </LinearLayout>
 
@@ -127,7 +103,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
-            android:text="Catatan:"
+            android:text="@string/catatan"
             android:textStyle="bold" />
 
         <TextView
@@ -139,7 +115,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="8dp"
             android:justificationMode="inter_word"
-            android:text="Aplikasi ini hanya sebagai panduan awal untuk membantu Anda dalam melakukan diagnosa penyakit pada hamster Anda. Tetapi, hasil yang diberikan tidak dapat menggantikan diagnosa dari seorang dokter hewan yang berkualifikasi. Jika hamster Anda mengalami masalah kesehatan serius atau gejala yang tidak membaik, segera konsultasikan dengan dokter hewan." />
+            android:text="@string/isi_catatan_1" />
 
         <TextView
             android:id="@+id/thank_you_message"
@@ -150,7 +126,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="16dp"
             android:justificationMode="inter_word"
-            android:text="Terima kasih telah menggunakan Aplikasi Sistem Pakar Diagnosa Penyakit Hamster. Semoga aplikasi ini dapat memberikan informasi yang berguna untuk merawat hamster Anda dengan lebih baik."
+            android:text="@string/isi_catatan_2"
             android:textStyle="italic" />
 
     </LinearLayout>
