--- a/app/src/main/res/layout/fragment_pradiagnose.xml
+++ b/app/src/main/res/layout/fragment_pradiagnose.xml
@@ -31,10 +31,22 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <TextView
-        android:id="@+id/pra_diagnose"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:gravity="center_horizontal"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:text="@string/welcome_pradiagnose" />
+
+    <TextView
+        android:id="@+id/pra_diagnose"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:textSize="14sp"
