--- a/app/src/main/res/layout/disease_list.xml
+++ b/app/src/main/res/layout/disease_list.xml
@@ -13,7 +13,7 @@
 
     <RelativeLayout
         android:layout_width="330dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_margin="15dp">
 
         <TextView
@@ -21,12 +21,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="Nama Penyakit"
+            android:layout_marginStart="10dp"
+            android:text="@string/nama_penyakit"
             android:textColor="@color/black"
             android:textSize="25sp"
-            android:textStyle="bold" />
+            android:textStyle="normal" />
 
     </RelativeLayout>
 
