--- a/app/src/main/res/layout/result_list.xml
+++ b/app/src/main/res/layout/result_list.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:textStyle="bold"
+            android:textStyle="normal"
             android:textColor="@color/black"
             android:layout_marginStart="12dp"
             android:text="Penyakit"
@@ -34,6 +34,7 @@
             android:textSize="16sp"
             android:textColor="@color/black"
             android:layout_marginStart="8dp"
+            android:textStyle="bold"
             android:layout_toEndOf="@id/txtKeterangan"
             android:text="Keterangan"
             />
