--- a/app/src/main/res/layout/fragment_pradiagnose.xml
+++ b/app/src/main/res/layout/fragment_pradiagnose.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/title_diagnosa"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/White"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -54,9 +54,31 @@
         android:text="@string/pradiagnose_txt" />
 
     <TextView
+        android:id="@+id/pra_diagnose_ii"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:textSize="14sp"
+        android:justificationMode="inter_word"
+        android:text="@string/pradiagnose_ii_txt" />
+
+    <TextView
+        android:id="@+id/pra_diagnose_iii"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:textSize="14sp"
+        android:justificationMode="inter_word"
+        android:text="@string/pradiagnose_iii_txt" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:textSize="14sp"
